--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "angular-relative-date",
   "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wildlyinaccurate/angular-relative-date.git"
+  },
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
