--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,15 @@
   "name": "angular-relative-date",
   "version": "0.1.0",
   "description": "AngularJS filter to provide relative, human-readable dates.",
-  "author": "Joseph Wynn",
+  "homepage": "https://github.com/wildlyinaccurate/angular-relative-date",
+  "authors": [
+    "Joseph Wynn <joseph@wildlyinaccurate.com>"
+  ],
+  "keywords": [
+    "angular",
+    "relative",
+    "date"
+  ],
   "license": "MIT",
   "main": "./angular-relative-date.js",
   "dependencies": {
