--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: node_js
 node_js:
   - 0.10
 before_script:
-  - npm install -g bower@1.2.x grunt-cli
+  - npm install -g bower@1.3.x grunt-cli
+  - bower cache clean
   - bower install
