--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-relative-date",
-  "version": "0.1.0",
+  "name": "angular-relative-date-zhtw",
+  "version": "0.1.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/rk87/angular-relative-date.git"
